--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           - 8888:8000
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: ['8.0']
         stability: [prefer-lowest, prefer-stable]
@@ -76,7 +76,7 @@ jobs:
           command: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit --verbose --filter testGetTranslationWhenReplacingToNullValue
         env:
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
           DB_USERNAME: root
@@ -89,7 +89,7 @@ jobs:
     runs-on: windows-latest
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: ['8.0']
         stability: [prefer-lowest, prefer-stable]
@@ -136,4 +136,4 @@ jobs:
           command: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit --verbose --filter testGetTranslationWhenReplacingToNullValue
